fix header collapse

--- a/src/modules/market/components/market-header/market-header.styles.less
+++ b/src/modules/market/components/market-header/market-header.styles.less
@@ -15,6 +15,10 @@
   margin-top: 1.85rem;
 }
 
+.MarketHeader__buttonContainer__collapsed {
+  margin-top: 0;
+}
+
 .MarketHeader__button {
   background: @color-dark-gray;
   border-radius: 6rem;
@@ -119,7 +123,6 @@
 
 .MarketHeader__main-values {
   display: flex;
-  flex: 1;
 }
 
 .MarketHeader__description {
